2005-03-24  Tor Lillqvist  <tml@novell.com>

	* art_misc.h (ART_GNUC_PRINTF, ART_GNUC_NORETURN): Use __format__,
	__printf__ and __noreturn__ to avoid warnings in case "format",
	"printf" or "noreturn" are #defined to something else. For example
	GNU libintl.h (at least some versions of it) #defines printf as
	libintl_printf.

2005-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* art_render_gradient.c: (art_render_gradient_radial_render):
	* testart.c:
	* testuta.c: (main): Fix some compiler warnings etc.

2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>

	* Release 2.3.17

2004-03-22  Michael Meeks  <michael@ximian.com>

	* Makefile.am (EXTRA_DIST): add libart.def.

2004-03-04  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am, configure.in, libart-2.0-uninstalled.pc.in:
	Add uninstalled pkg-config file.

Tue Sep 09 16:30:31 2003  George Lebl <jirka@5z.com>

	* Release 2.3.16

	* art_render_gradient.c: revert the double comparison test in the
	  asserts and comment out the two asserts causing crashes
	  everywhere, see bug #121850

2003-09-02  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 2.3.15

2003-08-26  Morten Welinder  <terra@gnome.org>

	* art_render_gradient.c (art_render_gradient_linear_render_8): Fix
	vertical gradients.  Fix yet more floating point comparisons using
	!=.  For the record, Gnumeric is a heavy user.

2003-08-14  Tor Lillqvist  <tml@iki.fi>

	Some nitpicking changes for Win32:

	* libart-features.h.in: Declare the variables from the library as
	dlimport/dllexport on Win32.

	* Makefile.am: Don't use -lm on Win32. Use the libart.def file.

	* makefile.msc: Update to generate same name DLL and import
	library as auto* and libtool. Add missing objects. (But dunno if
	it is useful to maintain this file. It isn't distributed in the
	source tarballs (should it be?). And, if it were distributed, and
	the intention was to support random people really building libart
	with MSVC, one should distribute also prebuilt config.h(.win32)